trunk/Archive2/e4/f54579ab000932/output
main.cpp:1:140: error: function definition is not allowed here
__declspec(noinline) void testSTD() {                                                               __declspec(noinline) void testManual() {
                                                                                                                                           ^
main.cpp:38:1: error: expected unqualified-id
00251D3D  ret                                                                                       00251D96  ret  
^
2 errors generated.
